cluster/k8s-dns/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-dns-deployment
  namespace: k8s-dns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8s-dns
  template:
    metadata:
      labels:
        app: k8s-dns
    spec:
      serviceAccountName: k8s-dns-account
      nodeSelector:
        role: apps
      containers:
        - env:
            - name: TECHNITIUM_HOST
              value: http://technitium-dns-service.technitium-dns.svc.cluster.local:5380
          image: cr.nathanv.app/ghcr.io/nathanvaughn/k8s-dns:0.1.5
          name: k8s-dns
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
